Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>There are many ways to be free. One of them is to transcend reality by imagination, as I try to do. - Anais Nin, writer (1903-1977)</p>
+        <p>December 14th, 2014 -
+If there is nothing else I can declare with confidence over the course of my lifespan of unknown length, it is thus:</p>
+
+<p>I believe in the power of books, of stories, of words. Did you know the same language can be used to describe a stallion and a novel? “A tour de force, an explosion of raw energy and vitality” Did you know that a sentence could be more lethal than a dagger? A well-placed period is devastating. A full-stop can draw blood. A line can be so heart-wrenchingly beautiful that in comprehending that procession of words your mind opens and blossoms in rapture of in a flash of clarity, quiver in the face of naked truth. If you want to move men’s hearts, learn how to wield a pen. Assemble your deadly arsenal of letters. Stock your inventory of lethal phrases. Command your troops of verbs and adjectives.  </p>
+
+<p>There are many ways to be free. One of them is to transcend reality by imagination, as I try to do. - Anais Nin, writer (1903-1977)</p>
 
 <p>Who only knows his own generation remains always a child.</p>
 
