Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@ If there is nothing else I can declare with confidence over the course of my lif
 
 <p>There are many ways to be free. One of them is to transcend reality by imagination, as I try to do. - Anais Nin, writer (1903-1977)</p>
 
+<p>There are many ways to be free. One of them is to transcend reality by imagination, as I try to do. - Anais Nin, writer (1903-1977)</p>
+
+<p>I live my life in widening circles that reach out across the weld. I may not complete this last one but I give myself to it. - Rilke</p>
+
+<p>To live is to choose. But to choose well, you must know who you are and what you stand for, where you want to go and why you want to get there. - Kofi Annan</p>
+
 <p>Who only knows his own generation remains always a child.</p>
 
 <p>A human being is  part of the whole called by us universe, a part limited in time and space. He experiences himself, his thoughts and feeling as something separated from the rest, a kind of optical illusion of his consciousness. This delusion is a kind of prison for us, restricting us to our personal desires and to affection for a few persons nearest to us. Our tasks must be to free ourselves from this person by widening our circle of compassion to embrace all living creatures and the whole of nature in its beauty. - Albert Einstein</p>
