--- a/index.html
+++ b/index.html
@@ -1,71 +1,72 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Amanda Song : Reflections">
+<head>
+        <title>Amanda Song</title>
+		<script type = 'text/javascript' src="1.js"></script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+<style>
 
-    <title>Amanda Song</title>
-  </head>
+	body{
+		text-align: center;
+        background-color: #B0E2FF;
+		background-size: cover;
+		background-position: center;
+		color: #00688B;
+		font-family: helvetica;
+	}
+	a {
+		color: black;
+	}
+	h1{
+		font-size: 70px;
+	}
+	img {
+		margin: 40px 0px 0px 0px;
+		border: 7px solid white;
+      	        border-radius: 20px;
+	}
+	article{
+		text-align: center;
+		max-width: 500px;
+		padding:20px;
+		margin: 0 auto;
+	}
 
-  <body>
+	@media(max-width: 500px){
+		h1 {
+			font-size: 36px;
+		}
+		li{
+			display: block;
+			padding: 5px;
+		}
+      body {
+        background: red;
+      }
+    }
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/amandasong">View on GitHub</a>
+	p{
+		color: black;
+		font-size: 22px;
+	}
+	
+</style>
 
-          <h1 id="project_title">Amanda Song</h1>
-          <h2 id="project_tagline">Reflections</h2>
+</head>
 
-        </header>
-    </div>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <p>December 14th, 2014 -
-If there is nothing else I can declare with confidence over the course of my lifespan of unknown length, it is thus:</p>
+<body>
+<img src="images/AS logo.jpg" alt="Logo">
 
-<p>I believe in the power of books, of stories, of words. Did you know the same language can be used to describe a stallion and a novel? “A tour de force, an explosion of raw energy and vitality” Did you know that a sentence could be more lethal than a dagger? A well-placed period is devastating. A full-stop can draw blood. A line can be so heart-wrenchingly beautiful that in comprehending that procession of words your mind opens and blossoms in rapture of in a flash of clarity, quiver in the face of naked truth. If you want to move men’s hearts, learn how to wield a pen. Assemble your deadly arsenal of letters. Stock your inventory of lethal phrases. Command your troops of verbs and adjectives.  </p>
+<div class="section" id="intro">
 
-<p>There are many ways to be free. One of them is to transcend reality by imagination, as I try to do. - Anais Nin, writer (1903-1977)</p>
+<h1>Hi, I'm Amanda.</h1>
+<p>I <a href = "blog.html">write</a>, <a href = "http://github.com/amandasong">code</a>, <a href = "sketch.html">draw</a> and <a href = "quotes.html">collect quotes</a>.
+</p>
 
-<p>There are many ways to be free. One of them is to transcend reality by imagination, as I try to do. - Anais Nin, writer (1903-1977)</p>
 
-<p>I live my life in widening circles that reach out across the weld. I may not complete this last one but I give myself to it. - Rilke</p>
 
-<p>To live is to choose. But to choose well, you must know who you are and what you stand for, where you want to go and why you want to get there. - Kofi Annan</p>
 
-<p>Who only knows his own generation remains always a child.</p>
+</body>
 
-<p>A human being is  part of the whole called by us universe, a part limited in time and space. He experiences himself, his thoughts and feeling as something separated from the rest, a kind of optical illusion of his consciousness. This delusion is a kind of prison for us, restricting us to our personal desires and to affection for a few persons nearest to us. Our tasks must be to free ourselves from this person by widening our circle of compassion to embrace all living creatures and the whole of nature in its beauty. - Albert Einstein</p>
-
-<p>You don’t need to do anything, because if you see yourself in the correct way, you are all as much extraordinary phenomena of nature as trees, clouds, the patterns in running water, the flickering of fire, the arrangement of the stars, and the form of a galaxy. You are all just like that, and there is nothing wrong with you at all.   - Alan Watts</p>
-
-<p>The present moment is the only moment available to us, and it is the door to all moments. - Thich Nhat Hanh</p>
-
-<p>Be soft. Do not let the world make you hard. Do not let the pain make you hate. Do not let the bitterness steal your sweetness. Take pride that even though the rest of the world may disagree, you still believe it to be a beautiful place. - Iain Thomas</p>
-
-<p>Examine the lives of the best and most fruitful people and peoples and ask yourselves whether a tree that is supposed to grow to a proud height can dispense with bad weather and storms; whether misfortune and external resistance, some kinds of hatred, jealousy, stubbornness, mistrust, hardness, avarice, and violence do not belong among the favorable conditions without which any great growth even of virtue is scarcely possible. - Friedrich Nietzsche</p>
-
-<p>Writing is saying to no one and to everyone the things it is not possible to say to someone. Or rather writing is saying to the no one who may eventually be the reader those things one has no someone to whom to say them. Matters that are so subtle, so personal, so obscure that I ordinarily can’t imagine saying them to the people to whom I’m closest. Every once in a while I try to say them aloud and find that what turns to mush in my mouth or falls short of their ears can be written down for total strangers. Said to total strangers in the silence of writing that is recuperated and heard in the solitude of reading. Is it the shared solitude of writing, is it that separately we all reside in a place deeper than society, even the society of two? Is it that the tongue fails where the fingers succeed, in telling truths so lengthy and nuanced that they are almost impossible aloud?</p>
-
-<p>I had started out in silence, written as quietly as I had read, and then eventually people read some of what I had written, and some of the readers entered my world or drew me into theirs. I started out in silence and traveled until I arrived at a voice that was heard far away – first the silent voice that can only be read, and then I was asked to speak aloud and to read aloud. When I began to read aloud another voice, once I hardly recognized, emerged from my mouth. Maybe it was more relaxed, because writing is speaking to no one, and even when you’re reading to a crowd, you’re still in that conversation with the absent, the faraway, the not-yet-born, the unknown and the long-gone for whom writers write, the crowd of the absent who hover all around the desk. - Rebecca Solnit </p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
-</html>
