--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
 <p>I <a href = "blog.html">write</a>, <a href = "http://github.com/amandasong">code</a>, <a href = "sketch.html">draw</a> and <a href = "quotes.html">collect quotes</a>.
 </p>
 
+<p> <a href = mailto:as4513@columbia.edu>Email me</a> or find me on<a hrf="http://linkedin.com/in/amandasong1">LinkedIn</a></p>
+
 
 
 
