--- a/index.html
+++ b/index.html
@@ -5,54 +5,6 @@
         <title>Amanda Song</title>
 		<script type = 'text/javascript' src="1.js"></script>
 
-<style>
-
-	body{
-		text-align: center;
-        background-color: #B0E2FF;
-		background-size: cover;
-		background-position: center;
-		color: #00688B;
-		font-family: helvetica;
-	}
-	a {
-		color: black;
-	}
-	h1{
-		font-size: 70px;
-	}
-	img {
-		margin: 40px 0px 0px 0px;
-		border: 7px solid white;
-      	        border-radius: 20px;
-	}
-	article{
-		text-align: center;
-		max-width: 500px;
-		padding:20px;
-		margin: 0 auto;
-	}
-
-	@media(max-width: 500px){
-		h1 {
-			font-size: 36px;
-		}
-		li{
-			display: block;
-			padding: 5px;
-		}
-      body {
-        background: red;
-      }
-    }
-
-	p{
-		color: black;
-		font-size: 22px;
-	}
-	
-</style>
-
 </head>
 
 
@@ -65,10 +17,9 @@
 <p>I <a href = "blog.html">write</a>, <a href = "http://github.com/amandasong">code</a>, <a href = "sketch.html">draw</a> and <a href = "quotes.html">collect quotes</a>.
 </p>
 
-<p> <a href = mailto:as4513@columbia.edu>Email me</a> or find me on<a hrf="http://linkedin.com/in/amandasong1">LinkedIn</a></p>
-
-
-
+<p> <a href = mailto:as4513@columbia.edu>Email me</a> or find me on<a href="http://linkedin.com/in/amandasong1">LinkedIn</a>
+	
+</p>
 
 </body>
 
