--- a/index.html
+++ b/index.html
@@ -3,8 +3,53 @@
 
 <head>
         <title>Amanda Song</title>
-		<script type = 'text/javascript' src="1.js"></script>
+	
+<style>
 
+	body{
+		text-align: center;
+        background-color: #B0E2FF;
+		background-size: cover;
+		background-position: center;
+		color: #00688B;
+		font-family: helvetica;
+	}
+	a {
+		color: black;
+	}
+	h1{
+		font-size: 70px;
+	}
+	img {
+		margin: 40px 0px 0px 0px;
+		border: 7px solid white;
+      	        border-radius: 20px;
+	}
+	article{
+		text-align: center;
+		max-width: 500px;
+		padding:20px;
+		margin: 0 auto;
+	}
+
+	@media(max-width: 500px){
+		h1 {
+			font-size: 36px;
+		}
+		li{
+			display: block;
+			padding: 5px;
+		}
+      body {
+        background: red;
+      }
+    }
+	p{
+		color: black;
+		font-size: 22px;
+	}
+	
+</style>
 </head>
 
 
