--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	body{
 		text-align: center;
-        background-color: #B0E2FF;
+        	background-color: white;
 		background-size: cover;
 		background-position: center;
 		color: #00688B;
@@ -54,7 +54,7 @@
 
 
 <body>
-<img src="images/AS logo.jpg" alt="Logo">
+<a href="http://tinypic.com?ref=11260z4" target="_blank"><img src="http://i62.tinypic.com/11260z4.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
 
 <div class="section" id="intro">
 
