--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
 
 	body{
 		text-align: center;
-        	background-color: white;
+        background: url("http://i58.tinypic.com/2a8qq34.png");
 		background-size: cover;
-		background-position: center;
-		color: #00688B;
+		color: white;
 		font-family: helvetica;
+		font-size: 30;
 	}
 	a {
-		color: black;
+		color: white;
+		font-weight: 5;
 	}
 	h1{
 		font-size: 70px;
@@ -34,19 +35,19 @@
 
 	@media(max-width: 500px){
 		h1 {
-			font-size: 36px;
+			font-size: 45px;
 		}
 		li{
 			display: block;
 			padding: 5px;
 		}
       body {
-        background: red;
+        color:white;
       }
     }
 	p{
-		color: black;
-		font-size: 22px;
+		color: white;
+		font-size: 30px;
 	}
 	
 </style>
@@ -54,17 +55,17 @@
 
 
 <body>
-<a href="http://tinypic.com?ref=11260z4" target="_blank"><img src="http://i62.tinypic.com/11260z4.jpg" border="0" alt="Image and video hosting by TinyPic"></a>
-
-<div class="section" id="intro">
-
-<h1>Hi, I'm Amanda.</h1>
-<p>I <a href = "blog.html">write</a>, <a href = "http://github.com/amandasong">code</a>, <a href = "sketch.html">draw</a> and <a href = "quotes.html">collect quotes</a>.
+<br> <br> <br> <br> <br> <br>
+<h1>Hi, I'm Amanda Song.</h1>
+<br>
+<p>I study Computer Science and French at Columbia University.</p>
+<br>
+<p>I <a href = "http://github.com/amandasong">code</a>, blog in <a href = "http://songamanda.tumblr.com/">English</a> and <a href = "http://espoirclair.tumblr.com/">French</a>, and <a href = "http://wordstoengrave.tumblr.com">collect quotes</a>. 
 </p>
 
-<p> <a href = mailto:as4513@columbia.edu>Email me</a> or find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a>
-	
+<p> You can also find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a> or send me an <a href = mailto:as4513@columbia.edu>email.</a>
 </p>
+
 
 </body>
 
