--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <br>
 <p>I study Computer Science and French at Columbia University.</p>
 <br>
-<p>I <a href = "http://github.com/amandasong">code</a>, blog in <a href = "http://songamanda.tumblr.com/">English</a> and <a href = "http://reve-eblouissant.tumblr.com/">French</a>, and <a href = "http://wordstoengrave.tumblr.com">collect quotes</a>. 
+<p>I <a href = "http://github.com/amandasong">code</a>, blog in <a href = "http://songamanda.tumblr.com/">English</a> and <a href = "http://encore-vivant.tumblr.com/">French</a>, and <a href = "http://wordstoengrave.tumblr.com">collect quotes</a>. 
 </p>
 
 <p> You can also find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a> or send me an <a href = mailto:as4513@columbia.edu>email.</a>
