--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
 	body{
 		text-align: center;
-        background: url("http://i58.tinypic.com/2a8qq34.png");
+        	background: url("http://twanight.org/newTWAN/photos/3002498.jpg");
 		background-size: cover;
 		color: white;
-		font-family: helvetica;
+		font-family: futura;
 		font-size: 30;
 	}
 	a {
