--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         	background: url("http://twanight.org/newTWAN/photos/3002498.jpg");
 		background-size: cover;
 		color: white;
-		font-family: futura;
+		font-family: avenir;
 		font-size: 30;
 	}
 	a {
