--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
         <title>Amanda Song</title>
-	
+
 <style>
 
 	body{
@@ -11,7 +11,7 @@
         	background: url("http://twanight.org/newTWAN/photos/3002498.jpg");
 		background-size: cover;
 		color: white;
-		font-family: helvetic neue;
+		font-family: helvetica;
 		font-size: 30;
 	}
 	a {
@@ -49,7 +49,7 @@
 		color: white;
 		font-size: 30px;
 	}
-	
+
 </style>
 </head>
 
@@ -60,7 +60,7 @@
 <br>
 <p>I study Computer Science and French at Columbia University.</p>
 <br>
-<p>I <a href = "http://github.com/amandasong">code</a>, blog in <a href = "http://songamanda.tumblr.com/">English</a> and <a href = "http://encore-vivant.tumblr.com/">French</a>, and <a href = "http://wordstoengrave.tumblr.com">collect quotes</a>. 
+<p> Check out my <a href = "http://github.com/amandasong">code</a> and writing <a href = "http://am-song.tumblr.com/"> /a>,
 </p>
 
 <p> You can also find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a> or send me an <a href = mailto:as4513@columbia.edu>email.</a>
@@ -68,4 +68,3 @@
 
 
 </body>
-
