--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 	body{
 		text-align: center;
-        	background: url("http://twanight.org/newTWAN/photos/3002498.jpg");
+        	background: url("https://images.unsplash.com/photo-1514897575457-c4db467cf78e?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80");
 		background-size: cover;
 		color: white;
 		font-family: helvetica;
-		font-size: 30;
+		font-size: 20;
 	}
 	a {
 		color: white;
@@ -58,13 +58,12 @@
 <br> <br> <br> <br> <br> <br>
 <h1>Hi, I'm Amanda.</h1>
 <br>
-<p>I study Computer Science and French at Columbia University.</p>
-<br>
-<p> Check out my <a href = "http://github.com/amandasong">code</a> and writing <a href = "http://am-song.tumblr.com/"> /a>,
+<p> I like to <a href = "https://medium.com/@amandasong"> write</a>
 </p>
 
-<p> You can also find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a> or send me an <a href = mailto:as4513@columbia.edu>email.</a>
+<p> You can also find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a>
 </p>
 
+<p> Photo by Benjamin Voros on Unsplash </p>
 
 </body>
