--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
 
 <style>
 
+
 	body{
-		text-align: center;
+		text-align: left;
         	background: url("https://images.unsplash.com/photo-1514897575457-c4db467cf78e?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80");
 		background-size: cover;
 		color: white;
 		font-family: helvetica;
 		font-size: 20;
 	}
-	a {
-		color: white;
-		font-weight: 5;
-	}
+
 	h1{
-		font-size: 70px;
+		font-size: 25px;
+ 
 	}
+ 	a {
+		color: white;
+	}
+ 
 	img {
 		margin: 40px 0px 0px 0px;
 		border: 7px solid white;
@@ -32,38 +35,49 @@
 		padding:20px;
 		margin: 0 auto;
 	}
-
 	@media(max-width: 500px){
 		h1 {
-			font-size: 45px;
+			font-size: 25px;
 		}
-		li{
+		h2 {
+		  	font-size:20px;
+		}
+    		li{
 			display: block;
 			padding: 5px;
 		}
       body {
-        color:white;
+        	color:white;
       }
     }
 	p{
 		color: white;
-		font-size: 30px;
+		font-size: 15px;
 	}
+  
+  	p1{
+    		font-size: 10px;
+    		text-align: right;
+  	}
+
 
 </style>
 </head>
-
-
 <body>
-<br> <br> <br> <br> <br> <br>
+<br> <br> <br> <br> <br>
 <h1>Hi, I'm Amanda.</h1>
-<br>
-<p> I like to <a href = "https://medium.com/@amandasong"> write</a>
+<p>
+I write on <a href = "https://medium.com/@amandasong">medium</a> and send out an occasional <a href ="https://tinyletter.com/amandasong">tinyletter</a>
 </p>
 
 <p> You can also find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a>
 </p>
 
-<p> Photo by Benjamin Voros on Unsplash </p>
+<br>
+<br>
+<br> 
+<br>
+<p1> Photo by <a href = "https://unsplash.com/photos/U-Kty6HxcQc"> Benjamin Voros </a> on <a href = https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText> Unsplash </a></p1>
 
 </body>
+
