--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
 
 	body{
-		text-align: left;
+		text-align: right;
         	background: url("https://images.unsplash.com/photo-1514897575457-c4db467cf78e?ixlib=rb-1.2.1&auto=format&fit=crop&w=2850&q=80");
 		background-size: cover;
 		color: white;
 		font-family: helvetica;
-		font-size: 20;
+		font-size: 25;
 	}
 
 	h1{
@@ -40,7 +40,7 @@
 			font-size: 25px;
 		}
 		h2 {
-		  	font-size:20px;
+		  	font-size:25px;
 		}
     		li{
 			display: block;
