--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
 <h1>Hi, I'm Amanda.</h1>
 <p>
 I write on <a href = "https://medium.com/@amandasong">medium</a> and send out an occasional <a href ="https://tinyletter.com/amandasong">tinyletter</a>
+<a href = /static.html> Notes</a>
+	
 </p>
 
 <p> You can also find me on <a href="http://linkedin.com/in/amandasong1">LinkedIn</a>
