--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <br> <br> <br> <br> <br>
 <h1>Hi, I'm Amanda.</h1>
 <p>
-I write on <a href = "https://medium.com/@amandasong">medium</a> and send out an occasional <a href ="https://tinyletter.com/amandasong">tinyletter</a>
+I write on <a href = "https://medium.com/@amandasong">medium</a> and send out an occasional <a href ="https://tinyletter.com/amandasong">tinyletter.</a>
 <a href = "static.html"> Notes </a>
 	
 </p>
